# cloud-native

./: .gitignore
lab3/: conftest.py  requirements.txt
lab3/app/: config.py  openrouter_client.py  retry.py  runner.py
lab3/tests/: test_todo1_async_calls.py  test_todo2_retries_timeouts.py
lab4/: README.md  env.example  pyproject.toml
lab4/app/: auth.py  config.py  main.py  models.py  summarizer.py
lab4/tests/: agents.md  test_summarize.py
lab5-frontend/: .env.example  README.md  agents.md  package-lock.json  package.json  setup.sh
lab5-frontend/app/: layout.tsx  page.tsx
lab5-frontend/app/api/summarize/: route.ts
setting_env/: .gitignore  README.md  access_key.py.example
